# neural-network

./: CITATION.cff  CONFIG  LICENSE  README.md  main.py  model.py  pyproject.toml  train.py
.github/: CODEOWNERS
.github/workflows/: python-app.yml  python-publish.yml
.gtihub/: AUTHORS.md
src/ptl-neural-network/: run.py  train.py
