[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ptl-neural-network"
version = "1.0.0"
description = "Power Trip Lab's neural network!"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy"
]

[project.scripts]
ptl-neural = "ptl-neural-network.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
